--- a/specs_dsn/specs_dsn_comp.yaml
+++ b/specs_dsn/specs_dsn_comp.yaml
@@ -3,7 +3,7 @@ dsn_class: bag3_sync_sar_adc.design.comparator.CompDesigner
 root_dir: gen_outputs/dsn_comp
 
 dsn_params:
-  gen_specs: bag3_sync_sar_adc/bag3_sync_sar_adc/specs_gen/sar_lay/specs_comp_sa.yaml 
+  gen_specs: data/bag3_sync_sar_adc/specs_dsn/sar_template/specs_comp.yaml
 
   dsn_basename: AAA_COMP
   opt_specs:
@@ -30,4 +30,5 @@ dsn_params:
 
   env_list: [tt_25]
 
-  meas_params: bag3_sync_sar_adc/bag3_sync_sar_adc/specs_meas/sar_meas/specs_meas_comp_sa.yaml
+  meas_params: data/bag3_sync_sar_adc/specs_meas/sar_meas/specs_meas_comp_sa.yaml
+  dest_file: data/bag3_sync_sar_adc/specs_dsn/sar_run1/specs_comp.yaml
