--- a/specs_dsn/sar_template/specs_cdac_mim.yaml
+++ b/specs_dsn/sar_template/specs_cdac_mim.yaml
@@ -9,10 +9,10 @@ params:
   lower_layer_routing: True
   has_cm_sw: False
   nbits: 9
-  ny_list:    [1, 1, 1, 1, 1, 1, 2, 4, 4, 8] #necessary to figure out switch size
+  ny_list:    [1, 1, 1, 1, 1, 1, 2, 4, 4, 8]
   ratio_list: [1, 1, 2, 4, 8, 8, 8, 8, 8, 8] 
-  row_list: [1, 1, 1, 1, 2, 3, 5, 6, 8, 14]
   col_list: [1, 1, 2, 3, 3, 4, 4, 3, 4, 4]
+  row_list: [1, 1, 1, 1, 2, 3, 5, 6, 8, 14]
   sw_type: ['n', 'n', 'p']
   diff_idx: 7
   width: &cap_width 1600 # in resolution units (um/0.005)
@@ -23,8 +23,12 @@ params:
   w_n: 84 
   w_p: 84 
   w_cm: 84 
-  tr_widths: *tr_w
-  tr_spaces: *tr_sp
+  tr_widths: &tr_w
+    sig: {2: 1, 3: 2}
+    cap: {3: 3, 4: 3}
+    sup: {2: 1, 3: 1, 4: 4, 5: 1}
+  tr_spaces: &tr_sp
+    {}
   cap_config:
     ismim: True
     top_layer: 4 
