--- a/specs_dsn/sar_template/specs_comp.yaml
+++ b/specs_dsn/sar_template/specs_comp.yaml
@@ -10,7 +10,7 @@ lay_class: bag3_sync_sar_adc.layout.sar_comp.SA
 params:
   cls_name: bag3_sync_sar_adc.layout.sar_comp.SA
   sch_cls: comp_strongarm_core
-  shield: *shield
+  shield: False
   sup_top_layer: 3
   #ncols_tot: 100
   num_comp_tiles: 3
