--- a/specs_meas/sar_meas/specs_mea_sar_slice_static.yaml
+++ b/specs_meas/sar_meas/specs_mea_sar_slice_static.yaml
@@ -5,7 +5,7 @@ impl_cell: SAR_SLICE_STATIC
 lay_class: bag3_sync_sar_adc.layout.sar_sync_bootstrap.SARSliceBoostrap
 root_dir: gen_outputs/sarslice2
 
-gen_specs_file: 'bag3_sync_sar_adc/bag3_sync_sar_adc/specs_gen/sar_lay/specs_slice_sync_bootstrap.yaml'
+gen_specs_file: 'data/bag3_sync_sar_adc/specs_gen/sar_lay/specs_slice_sync_bootstrap_small.yaml'
 
 meas_params:
   make_static_code_map: True
@@ -13,28 +13,29 @@ meas_params:
     # {}
     vdm:
       type: 'LINEAR'
-      start: -0.8
-      stop: 0.8
+      start: -1.6
+      stop: 1.6
       num: 2
 
   tbm_specs:
     sim_envs:
       - tt_25
     # You must save something, otherwise SRR to HDF5 will error out
-    save_outputs: ['data_out<8:0>', 'vref<2:0>', 'in_n', 'in_p', 'top_n', 'top_p', 'comp_p', 'comp_n', 'clk']
+    save_outputs: ['data_out<4:0>','vref<2:0>','in_n','in_p','top_n','top_p','comp_p','comp_n', 'clk']
     tran_options:
       #maxstep: 1.0e-12
       errpreset: liberal
     sim_params:
-      num_channel: 9
-      t_sim: '10*num_channel*t_per'
+      num_channel: 7
+      num_samples: 1
+      t_sim: '(0+num_samples)*num_channel*t_per'
       t_rf: 20e-12
       # t_early: 50e-9
       t_per: 10e-9
       # t_sam: 't_per/2' #'t_per/2-t_rf'
       v_vcm: 0.95
-      vrefp: 1.8
-      vrefn: 0.1
+      vrefp: 1.75
+      vrefn: 0.15
       vdm: 200e-3
       vdd: 1.8 #0.85
     pwr_domain:
