--- a/specs_dsn/specs_dsn_TOP.yaml
+++ b/specs_dsn/specs_dsn_TOP.yaml
@@ -6,16 +6,19 @@ process_info:
   unit_res_ohms: 6600
   cap_mismatch_percentage: 10
 top_specs:
-  resolution_bits: 8
+  resolution_bits: 7 #8
   samp_freq: 1e6
   input_range: 1.8
-  throughput: 11 # latency
+  throughput: 8 #11 # latency
 app_specs:
   clk_in_jitter: 1e-11
 
 opt_components:
   comp: data/bag3_sync_sar_adc/specs_dsn/specs_dsn_comp.yaml
   bootstrap: data/bag3_sync_sar_adc/specs_dsn/specs_dsn_bootstrap.yaml
+  bootstrap_copy: specs_dsn_bootstrap.yaml
+  sig_sampler_dsn: bootstrap/specs_lay_dsn.yaml
+  sig_sampler_meas: specs_meas_bootstrap.yaml
 
 gen_specs: data/bag3_sync_sar_adc/specs_dsn/sar_template/sar_top.yaml
 dest_files:
